--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="home_icon_text">Home</string>
     <string name="cases_icon_text">Cases</string>
     <string name="alert_icon_text">Alerts</string>
+    <string name="continue_text">Continue</string>
+
+
 
 
 </resources>
